Updated features and fixed communities

--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "next": "13.4.10",
     "postcss": "8.4.26",
     "prettier": "^3.0.0",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-apexcharts": "^1.5.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "supabase": "^1.219.2",
     "svix": "^1.7.0",
